# Bookit

./: .gitignore  Bookstart_HANDOFF.md  COMPLETE_SYSTEM_SUMMARY.md  DOCUMENT_PROCESSING_SUMMARY.md  ENHANCED_FEATURES_SUMMARY.md  Editor.md  FEATURES_CHECKLIST.md  FEATURE_ANALYSIS.md  FINAL_SYSTEM_READY.md  FINAL_TESTING_REPORT.md  FINAL_TESTING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  LICENSE  MODERN_GUI_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  RETRO_WRITER_README.md  RETRO_WRITER_SUMMARY.md  TESTING_SUMMARY.md  agent_manager.py  book_builder.py  book_exporter.py  book_workflow.py  chapter_expander.py  cli.py  comprehensive_book_exporter.py  create_structure.py  demo_integration.py  document_ingestor.py  editor_agent.py  enhanced_system.py  expand_chapters.sh  expansion_log.txt  full_book_generator_cli.py  gui.py  integrated_system.py  launcher.py  (+37 more)
AI_Book_Research_System/: README.md  config.json  expansion_engine.py  export_engine.py  research_engine.py  research_system.sh  writing_engine.py
Books/: README.md  Tarot_and_Magic_tarot_magic_20250911_022136.md  Tarot_for_Witches_tarot_witches_20250911_021447.json  all.md  folder_structure.txt
Books/01_Tarot_for_Witches/: Tarot_for_Witches_tarot_witches_20250911_021447.html  Tarot_for_Witches_tarot_witches_20250911_021447.md  Tarot_for_Witches_tarot_witches_20250911_021447.txt
Books/02_Tarot_and_Magic/: Tarot_and_Magic_tarot_magic_20250911_022136.html  Tarot_and_Magic_tarot_magic_20250911_022136.json  Tarot_and_Magic_tarot_magic_20250911_022136.txt
Books/03_Tarot_Major_Arcana_Journey/: README.md  Tarot_Major_Arcana_Journey_major_arcana_20250911_022636.html  Tarot_Major_Arcana_Journey_major_arcana_20250911_022636.json  Tarot_Major_Arcana_Journey_major_arcana_20250911_022636.md  Tarot_Major_Arcana_Journey_major_arcana_20250911_022636.txt  Tarot_Major_Arcana_Journey_major_arcana_20250911_022636_simple.docx
Books/04_Tarot_for_Writers_and_Storytellers/: README.md  Tarot_for_Writers_and_Storytellers_writers_tarot_20250911_023244.html  Tarot_for_Writers_and_Storytellers_writers_tarot_20250911_023244.json  Tarot_for_Writers_and_Storytellers_writers_tarot_20250911_023244.md  Tarot_for_Writers_and_Storytellers_writers_tarot_20250911_023244.txt  Tarot_for_Writers_and_Storytellers_writers_tarot_20250911_023244_simple.docx
Books/05_Tarot_for_a_Lifetime/: README.md  (+5 more)
Books/06_The_Tarot_Companion/: README.md  (+8 more)
agents/: __init__.py
apps/: 01_folder_creator.py  02_architects_outline.py  02_architects_outline_safe.py  03_enhance_chapter_manual.py  03_enhance_chapters.py  04_deep_drill.py  04_outline_wizard.py  05_reasoning_guide.py  06_chapter_maker.py  07_deep_drill.py  08_folder_filler.py  09_batch_fix.py  10_combine_chapters.py  11_master_control.py  12_buzzwords_KeywordGen.py  13_indiana_PDFExtractor.py  14_batcave_TestSuite.py  15_r2d2_OllamaTest.py  Bookstart.py  WP copy.md  ai_tab_editor copy.py  alt.py  bookdrill.py  changesmod copy.md  full_wordpro_feed.py  merge_chapters_to_full.py  miniring.py  onering.py  pretextinwindow.py  resume.py
book_builder/: __init__.py  book_builder.py
cli/: __init__.py  cli.py
collaboration/: __init__.py  collaboration_manager.py
docs/: INSTALL.md  INTEGRATIONS.md  README.md
document_ingestor/: __init__.py  document_ingestor.py  enhanced_ingestor.py
document_processor/: __init__.py  document_processor.py  layout_analyzer.py  ocr_processor.py  pdf_processor.py  table_extractor.py  unified_parser.py
export_manager/: __init__.py  export_manager.py
gui/: __init__.py  gui.py  modern_app.py  modern_main.py  stitch_like_app.py
llm_client/: __init__.py  llm_client.py
memory_manager/: __init__.py  memory_manager.py
output_manager/: __init__.py  output_manager.py
publishing/: __init__.py
research/: REPOS.md  RESEARCH.md  __init__.py
research_assistant/: __init__.py  research_assistant.py
scripts/: run_book_workflow.sh  run_tests.sh
style_manager/: __init__.py  style_manager.py
template_manager/: __init__.py  template_manager.py
test_data/: memory.json
test_results/: comprehensive_test_report_20250909_114844.md  comprehensive_test_report_20250909_115951.md  comprehensive_test_report_20250909_120549.md  comprehensive_test_report_20250909_121041.md  comprehensive_test_report_20250909_121820.md  comprehensive_test_results_20250909_114844.json  comprehensive_test_results_20250909_115951.json  comprehensive_test_results_20250909_120549.json  comprehensive_test_results_20250909_121041.json  comprehensive_test_results_20250909_121820.json  test_report.md  test_report_20250909_112245.md  test_report_20250909_112539.md  test_report_20250909_112558.md  test_report_20250909_112627.md  test_report_20250909_112659.md  test_report_20250909_112729.md  test_report_20250909_112756.md  test_report_20250909_112816.md  test_report_20250909_112849.md  test_report_20250909_112914.md  test_report_20250909_113031.md  test_results.json  test_results_20250909_112245.json  test_results_20250909_112539.json  test_results_20250909_112558.json  test_results_20250909_112627.json  test_results_20250909_112659.json  test_results_20250909_112729.json  test_results_20250909_112756.json  test_results_20250909_112816.json  test_results_20250909_112849.json  test_results_20250909_112914.json  test_results_20250909_113031.json
tests/: __init__.py  conftest.py  test_agent_manager_comprehensive.py  test_agents.py  test_cli.py  test_core_functionality.py  test_document_ingestor.py  test_document_ingestor_comprehensive.py  test_full_book_generator.py  test_gui.py  test_gui_comprehensive.py  test_gui_simple.py  test_integration.py  test_llm_client.py  test_llm_client_comprehensive.py  test_memory_manager.py  test_memory_manager_comprehensive.py  test_memory_operations.py  test_runner.py  test_simple.py  test_system.py  test_system_integration_comprehensive.py  test_system_simple.py  test_tool_manager.py  test_tool_manager_comprehensive.py
tool_manager/: __init__.py  tool_manager.py
unfucked/: 02_architects_outline_safe.py
(+59 files in other folders)
